[package]
name = "oxidiser-models"
version = "0.1.0"
authors = ["Mițca Dumitru <dumitru0mitca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"